--- a/menuBytesKitchen/app/src/main/res/layout/meals_order_list.xml
+++ b/menuBytesKitchen/app/src/main/res/layout/meals_order_list.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="370dp"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="12dp">
 
     <TextView
         android:id="@+id/txtMealQty"
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/txtMealName"
-        android:layout_width="190dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
@@ -25,5 +25,17 @@
         android:textColor="#FF000000"
         android:textSize="15sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txtAddOns"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@id/txtMealQty"
+        android:text="Table "
+        android:textColor="#FF000000"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
