--- a/menuBytesKitchen/app/src/main/res/layout/activity_intro.xml
+++ b/menuBytesKitchen/app/src/main/res/layout/activity_intro.xml
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/loginButton"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
