--- a/menuBytesKitchen/app/src/main/res/layout/activity_main.xml
+++ b/menuBytesKitchen/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginRight="5dp"
         android:text="Table Name:"
         android:textColor="#FF000000"
-        android:textSize="15dp"
+        android:textSize="28dp"
         app:layout_constraintEnd_toStartOf="@+id/txtViewTableNum"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -25,10 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:textColor="#FF000000"
-        android:textSize="15dp"
+        android:textSize="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewOrderNum" />
 
@@ -36,56 +36,57 @@
         android:id="@+id/txtViewOrderNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="50dp"
         android:textColor="#FF000000"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/mealsInOrderLV"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginBottom="50dp"
         android:text="Order Number:"
-        android:textSize="15dp"
         android:textColor="#FF000000"
-        app:layout_constraintEnd_toStartOf="@+id/txtViewOrderNum"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/mealsInOrderLV"
+        app:layout_constraintEnd_toStartOf="@+id/txtViewOrderNum" />
 
     <ListView
         android:id="@+id/incomingOrderLV"
-        android:layout_width="370dp"
-        android:layout_height="290dp"
+        android:layout_width="600dp"
+        android:layout_height="550dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="40dp"
         android:background="#FFFFFF"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
         android:id="@+id/mealsInOrderLV"
-        android:layout_width="370dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="600dp"
+        android:layout_height="485dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="105dp"
         android:background="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
     </ListView>
 
     <Button
         android:id="@+id/buttonPrepareThis"
-        android:layout_width="110dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textSize="25dp"
         android:text="Prepare"
         app:layout_constraintEnd_toStartOf="@+id/buttonServeThis"
         app:layout_constraintStart_toEndOf="@+id/buttonRejectThis"
@@ -93,18 +94,20 @@
 
     <Button
         android:id="@+id/buttonRejectThis"
-        android:layout_width="110dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textSize="25dp"
         android:text="Reject"
         app:layout_constraintStart_toStartOf="@+id/mealsInOrderLV"
         app:layout_constraintTop_toBottomOf="@+id/mealsInOrderLV" />
 
     <Button
         android:id="@+id/buttonServeThis"
-        android:layout_width="110dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textSize="25dp"
         android:text="serve"
         app:layout_constraintEnd_toEndOf="@+id/mealsInOrderLV"
         app:layout_constraintTop_toBottomOf="@+id/mealsInOrderLV" />
@@ -113,12 +116,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginLeft="35dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="55dp"
         android:layout_marginBottom="5dp"
         android:text="Order No."
         android:textColor="#FF000000"
-        android:textSize="13dp"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/incomingOrderLV"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -131,7 +134,7 @@
         android:layout_marginBottom="5dp"
         android:text="Table No."
         android:textColor="#FF000000"
-        android:textSize="13dp"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/incomingOrderLV"
         app:layout_constraintStart_toEndOf="@+id/textView" />
 
@@ -144,7 +147,7 @@
         android:layout_marginBottom="5dp"
         android:text="Order Qty."
         android:textColor="#FF000000"
-        android:textSize="13dp"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/incomingOrderLV"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
 
@@ -152,12 +155,12 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="70dp"
         android:layout_marginLeft="40dp"
         android:layout_marginBottom="5dp"
         android:text="Status"
         android:textColor="#FF000000"
-        android:textSize="13dp"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/incomingOrderLV"
         app:layout_constraintStart_toEndOf="@+id/textView3" />
 
@@ -165,12 +168,12 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginBottom="20dp"
         android:text="Status:"
-        android:textSize="13dp"
         android:textColor="#FF000000"
-        app:layout_constraintStart_toStartOf="@+id/mealsInOrderLV"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/mealsInOrderLV"
+        app:layout_constraintStart_toStartOf="@+id/mealsInOrderLV" />
 
     <TextView
         android:id="@+id/txtViewOrderStatus"
@@ -178,21 +181,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginBottom="20dp"
         android:textColor="#FF000000"
-        android:textSize="18dp"
+        android:textSize="31dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/mealsInOrderLV"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:text="Pending Order(s)"
         android:textColor="#FF000000"
-        android:textSize="18dp"
+        android:textSize="31dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/incomingOrderLV"
         app:layout_constraintStart_toStartOf="@+id/incomingOrderLV"
