--- a/menuBytesKitchen/app/src/main/res/layout/activity_main.xml
+++ b/menuBytesKitchen/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:textSize="25dp"
-        android:text="Reject"
+        android:text="Void"
         app:layout_constraintStart_toStartOf="@+id/mealsInOrderLV"
         app:layout_constraintTop_toBottomOf="@+id/mealsInOrderLV" />
 
